Fixes spacing

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,5 +1,6 @@
 .homepage {
   h4 {
+    margin-top: 50px;
     font-size: 15px;
     font-weight: bold;
     letter-spacing: 1.7px;
